MySFDCProject/src/objects/Review__c.object
<CustomObject>
    <fields>
        <fullName>Average_Rating__c</fullName>
        <formula>(Rating_Research__c +  Rating_Story_Telling__c + Rating_Writing_Style__c ) / 3</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Rating</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Book__c</fullName>
        <label>Book</label>
        <referenceTo>Book__c</referenceTo>
        <relationshipLabel>Reviews</relationshipLabel>
        <relationshipName>Reviews</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Rating_Research__c</fullName>
        <label>Rating-Research</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating_Story_Telling__c</fullName>
        <label>Rating-Story Telling</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rating_Writing_Style__c</fullName>
        <label>Rating-Writing Style</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Review__c</fullName>
        <label>Review</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Review</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Review Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reviews</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Rating_Research</fullName>
        <active>true</active>
        <errorConditionFormula>Rating_Research__c &lt;1  ||  Rating_Research__c &gt;5</errorConditionFormula>
        <errorDisplayField>Rating_Research__c</errorDisplayField>
        <errorMessage>Rating Research should be between 1 and 5</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rating_Story_Telling</fullName>
        <active>true</active>
        <errorConditionFormula>Rating_Story_Telling__c &lt;1 ||  Rating_Story_Telling__c &gt;5</errorConditionFormula>
        <errorMessage>Rating should be between 1 and 5</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rating_Writing_Style</fullName>
        <active>true</active>
        <errorConditionFormula>Rating_Writing_Style__c &lt;1 ||  Rating_Writing_Style__c &gt;5</errorConditionFormula>
        <errorDisplayField>Rating_Writing_Style__c</errorDisplayField>
        <errorMessage>Rating should be between 1 and 5</errorMessage>
    </validationRules>
</CustomObject>